eeepc-acpi-scripts (1.1.10) UNRELEASED; urgency=low

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Wed, 03 Feb 2010 21:41:29 +0000

eeepc-acpi-scripts (1.1.9) unstable; urgency=low

  * suspend.sh: fix the check for a running /sbin/shutdown
    Thanks to Darren Salt.

 -- Damyan Ivanov <dmn@debian.org>  Wed, 27 Jan 2010 07:43:57 +0200

eeepc-acpi-scripts (1.1.8) unstable; urgency=low

  [ Darren Salt ]
  * Don't fail on upgrade, removal etc. if the acpid init script is missing.
  * Simplify rfkill handling. (Requires rfkill 0.3-3.)

  [ Damyan Ivanov ]
  * wireless.sh/disable: do not fail if no interface can be brought down
  * add ${misc:Depends} to dependencies
  * suspend.sh: when checking for a running shutdown, check only for processes
    owned by root. Closes: #565855
    Thanks to Daniel Kahn Gillmor for reporting.

 -- Damyan Ivanov <dmn@debian.org>  Tue, 26 Jan 2010 21:19:50 +0200

eeepc-acpi-scripts (1.1.7) unstable; urgency=low

  [ Damyan Ivanov ]
  * add a hook in /etc/pm/sleep.d that switches off wlan on suspend on models
    using RT2860
  * wireless.sh: deconfigure wlan0 and remove the rt2860sta module before
    switching off the hardware
  * lid.sh/sleep.sh: remove checks for running powersaved. The checks can be
    faked and powersaved was dropped from Debian. Partly addresses #565855.

  [ Darren Salt ]
  * rfkill-input isn't present in kernel ≥ 2.6.31, so don't try loading it.
  * Abstract out rfkill setting & getting.
  * Use (and depend on) rfkill, but fall back if /dev/rfkill isn't present.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sat, 23 Jan 2010 03:14:54 +0000

eeepc-acpi-scripts (1.1.6) unstable; urgency=low

  * Add support for ACPI button/* and video/* events. (Closes: #562166)
    - It is possible that only these will be reported, but it is also
      possible that both these and hotkey events will be reported; and there
      are keys for which only hotkey events are reported (it is expected