@@ -1,5 +1,8 @@
 eeepc-acpi-scripts (1.1.10) UNRELEASED; urgency=low
 
+  * Fn-Space and the S.H.E. button are the same, and only generate a hotkey
+    event. Ensure that this isn't ignored.
+
  -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Wed, 03 Feb 2010 21:41:29 +0000
 
 eeepc-acpi-scripts (1.1.9) unstable; urgency=low
